--- a/dev.html
+++ b/dev.html
@@ -9,7 +9,7 @@
   <title>RezePlayer Testing</title>
 
   <!-- Include RezePlayer CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.5/dist/assets/style.css">
+  <link rel="stylesheet" href="./dist/assets/style.css">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
   <div id="root"></div>
 
   <!-- Include RezePlayer JS -->
-  <script src="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.5/dist/rezeplayer.iife.js"></script>
+  <script src="./dist/rezeplayer.iife.js"></script>
 
   <script>
     // Initialize RezePlayer with ALL servers from server.ts
