--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RezePlayer - Standalone HLS Video Player" />
-  <title>RezePlayer - Documentation</title>
+  <title>RezePlayer - Docs</title>
 
   <style>
     * {
