--- a/dev.html
+++ b/dev.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/logo.png" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RezePlayer Test" />
   <title>RezePlayer Testing</title>
 
