--- a/example.html
+++ b/example.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/logo.png" />
-<meta name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RezePlayer Test" />
   <title>RezePlayer Testing</title>
 
   <!-- Include RezePlayer CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.6/dist/assets/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.8/dist/assets/style.css">
 
 </head>
 <body>
@@ -17,7 +16,7 @@
   <div id="root"></div>
 
   <!-- Include RezePlayer JS -->
-  <script src="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.6/dist/rezeplayer.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.8/dist/rezeplayer.iife.js"></script>
 
   <script>
     // Initialize RezePlayer with ALL servers from server.ts
