--- a/example.html
+++ b/example.html
@@ -73,10 +73,14 @@
           src: 'https://rezeplayer.vercel.app/reze/subs/arabic.vtt',
         }
       ],
-      autoPlay: true,
+      posterUrl: 'https://rezeplayer.vercel.app/reze/poster.png',
+      autoPlay: false,
       volume: 1,
       startTime: 0,
-      enableWatchParty: true
+      enableWatchParty: true,
+      enableCast: true,
+      //themeColor: 'e01621',
+      thumbsInterval: 10000, // 10 seconds
     });
   </script>
 </body>
