--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
   <title>RezePlayer Testing</title>
 
   <!-- Include RezePlayer CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.14/dist/assets/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rezeplayer@latest/dist/assets/style.css">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
   <div id="root"></div>
 
   <!-- Include RezePlayer JS -->
-  <script src="https://cdn.jsdelivr.net/npm/rezeplayer@1.1.14/dist/rezeplayer.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/rezeplayer@latest/dist/rezeplayer.iife.js"></script>
 
   <script>
     // Initialize RezePlayer with ALL servers from server.ts
