--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
     <h2>Quick Start</h2>
     <p>Get up and running in three simple steps.</p>
     <h3>1. Full Page Mode IMPORTANT</h3>
-    <p>For a clean, full-page player experience, add the <code class="n">data-full</code> attribute to your root <code class="t">html</code> tag, or else player styling will be broken cuz of tailwind limitation of preflight lmao</p>
-    <pre><button class="copy-btn" data-target="code5">Copy</button><code id="code5">&lt;<span class="t">html</span> <span class="a">lang</span>=<span class="s">"en"</span> <span class="a">data-full</span>&gt;</code></pre>
+    <p>For a clean, full-page player experience, add the <code class="n">data-full</code> and <code class="n">ltr</code> attribute to your root <code class="t">html</code> tag, or else player styling will be broken cuz of tailwind limitation of preflight lmao</p>
+    <pre><button class="copy-btn" data-target="code5">Copy</button><code id="code5">&lt;<span class="t">html</span> <span class="a">lang</span>=<span class="s">"en"</span> <span class="a">dir</span>=<span class="s">"ltr"</span> <span class="a">data-full</span>&gt;</code></pre>
     <h3>2. Include CSS and JS</h3>
-    <pre><button class="copy-btn" data-target="code1">Copy</button><code id="code1">&lt;<span class="t">link</span> <span class="a">rel</span>=<span class="s">"stylesheet"</span> <span class="a">href</span>=<span class="s">""https://cdn.jsdelivr.net/npm/rezeplayer@1.1.14/dist/assets/style.css"</span>&gt;
-&lt;<span class="t">script</span> <span class="a">src</span>=<span class="s">"https://cdn.jsdelivr.net/npm/rezeplayer@1.1.14/dist/rezeplayer.iife.js"</span>&gt;&lt;/<span class="t">script</span>&gt;</code></pre>
+    <pre><button class="copy-btn" data-target="code1">Copy</button><code id="code1">&lt;<span class="t">link</span> <span class="a">rel</span>=<span class="s">"stylesheet"</span> <span class="a">href</span>=<span class="s">""https://cdn.jsdelivr.net/npm/rezeplayer@latest/dist/assets/style.css"</span>&gt;
+&lt;<span class="t">script</span> <span class="a">src</span>=<span class="s">"https://cdn.jsdelivr.net/npm/rezeplayer@latest/dist/rezeplayer.iife.js"</span>&gt;&lt;/<span class="t">script</span>&gt;</code></pre>
     <h3>3. Add Container</h3>
     <p>The player will be initialized inside this element.</p>
     <pre><button class="copy-btn" data-target="code2">Copy</button><code id="code2">&lt;<span class="t">div</span> <span class="a">id</span>=<span class="s">"player"</span>&gt;&lt;/<span class="t">div</span>&gt;</code></pre>
